# rnpm

./: .gitignore  Cargo.toml  check.sh
__example__/benchmark/: bench.sh  package-lock.json  package.json
__example__/wekan/: package-lock.json
example/: package-lock.json  package.json
src/: artifacts_manager.rs  main.rs  package.rs
src/parsers/: mod.rs  package_json.rs  package_lock.rs
src/strategies/: mod.rs  npm.rs
