[package]
name = "rnpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
rayon = "1.10"
flate2 = "1.0"
tar = "0.4"
directories = "4.0"
sha1 = "0.10.5"
commandspec = "0.12"
reflink = "0.1.3"
libc = "0.2.140"

[profile.release]
debug = true
opt-level = 3

